# confgetti

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
.github/workflows/: main.yml  publish-to-pypi.yml
confgetti/: __init__.py  base.py  exceptions.py  interface.py  load.py  logger.py  remote.py
demos/: convert_bool.py  convert_dict.py  convert_float.py  convert_int.py  get_variables.py  load_and_validate_consul.py  load_and_validate_consul_convert.py  load_and_validate_env.py  load_and_validate_json.py  load_and_validate_uppercase.py  simple_case.py  simple_case_env.py
demos/dummy/: config_0.json
tests/: fixtures.py  test_base.py  test_load.py  test_override.py  test_remote.py
