[tool.poetry]
name = "confgetti"
version = "0.1.13"
description = "Package for getting configuration variables from remote configuration server, json files and environment variables in a simple way"
authors = ["Styria Digital Development <development@styria.dev>"]
readme = 'README.md'
homepage = 'https://github.com/Styria-Digital/confgetti'
license = "Proprietary"

[tool.poetry.dependencies]
python = "^3.6"
python-consul = "^1.1.0"
voluptuous = "^0.11.7"

[tool.poetry.dev-dependencies]
responses = "^0.10.9"
faker = "^4.0.0"
testfixtures = "^6.10.3"
mock = "^3.0.5"
pytest = "^5.3.4"
pytest-cache = "^1.0"
pytest-cov = "^2.8.1"
pytest-runner = "^5.2"
pytest-sugar = "^0.9.2"
invoke = "^1.4.1"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
